<resources>
    <string name="app_name">ColoryrTrash</string>
    <string name="user_no_login">未登录</string>
    <string name="group">群组：</string>

    <string name="menu_home">欢迎</string>
    <string name="menu_list">垃圾桶列表</string>
    <string name="menu_user">用户信息</string>
    <string name="menu_map">地图定位</string>

    <string name="item_time">更新时间：</string>
    <string name="item_uuid">UUID：</string>
    <string name="item_nick">备注：</string>
    <string name="item_capacity">容量：</string>

    <string name="image_user">user image</string>
    <string name="image_item">item image</string>

    <string name="todo">TODO</string>
    <string name="ip">IP：</string>
    <string name="default_ip">127.0.0.1</string>
    <string name="port">Port：</string>
    <string name="default_port">12345</string>
    <string name="user">用户：</string>
    <string name="default_user">User</string>
    <string name="password">密码：</string>
    <string name="auto_login">保存令牌</string>

    <string name="login_button">登录</string>
    <string name="login_out_button">登出</string>
    <string name="local">定位</string>
    <string name="get_local">定位</string>
</resources>