<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/image_item" app:srcCompat="@mipmap/icon"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:paddingStart="5dp"
                    tools:text="OK"
                    tools:ignore="RtlSymmetry"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="@string/item_time"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry"/>

            <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="2021-01-01T19:00:00"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry"/>

        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="@string/item_uuid"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry"/>

            <TextView
                    android:id="@+id/uuid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="1234567890"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="@string/item_nick"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry"/>

            <TextView
                    android:id="@+id/nick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="1234567890"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="@string/item_capacity"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry"/>

            <TextView
                    android:id="@+id/capacity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    tools:text="30"
                    android:paddingStart="5dp"
                    tools:ignore="RtlSymmetry"/>

        </LinearLayout>
    </LinearLayout>
    <Button
            android:text="Button"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:id="@+id/button"
            android:layout_row="0"
            android:layout_column="2"/>

</GridLayout>
